--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
       {
-        "source": "/Tofu-the-Shiba-Inu-Euthanized-in-Virginia-Due-to-High-Medication-Costs-from-Trumps-Tariffs",
-        "destination": "/Tofu-the-Shiba-Inu-Euthanized-in-Virginia-Due-to-High-Medication-Costs-from-Trumps-Tariffs.html"
+        "source": "/Tragic-TikTok-Live-Incident-Bichon-Frisé-Snow-Thrown-from-Balcony-Owner-Arrested",
+        "destination": "/Tragic-TikTok-Live-Incident-Bichon-Frisé-Snow-Thrown-from-Balcony-Owner-Arrested.html"
       }
     ]
   }
