--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
       {
-        "source": "/Tragic-TikTok-Live-Incident-Bichon-Frisé-Snow-Thrown-from-Balcony-Owner-Arrested",
-        "destination": "/Tragic-TikTok-Live-Incident-Bichon-Frisé-Snow-Thrown-from-Balcony-Owner-Arrested.html"
+        "source": "/Tragic-TikTok-Live-Incident-Bichon-Frise-Snow-Thrown-from-Balcony-Owner-Arrested",
+        "destination": "/Tragic-TikTok-Live-Incident-Bichon-Frise-Snow-Thrown-from-Balcony-Owner-Arrested.html"
       }
     ]
   }
